--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -24,7 +24,7 @@
     <div class="contact-item">
         <i data-feather="linkedin"></i>
         <a href="https://linkedin.com/in/{{contact.linkedin}}">
-            {{contact.linkedin}}
+            LinkedIn
         </a>
     </div>
     {% endif %}
@@ -33,7 +33,7 @@
         <div class="contact-item">
             <i data-feather="github"></i>
             <a href="https://github.com/{{contact.github}}">
-                {{contact.github}}
+                GitHub
             </a>
         </div>
     {% endif %}
@@ -42,7 +42,7 @@
         <div class="contact-item">
             <i data-feather="gitlab"></i>
             <a href="https://gitlab.com/{{contact.gitlab}}">
-                {{contact.gitlab}}
+                GitLab
             </a>
         </div>
     {% endif %}
@@ -51,7 +51,7 @@
     <div class="contact-item">
         <i data-feather="twitter"></i>
         <a href="https://twitter.com/{{contact.twitter}}">
-            {{contact.twitter}}
+            X
         </a>
     </div>
     {% endif %}
