open links in new tab

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -23,7 +23,7 @@
     {% if contact.linkedin %}
     <div class="contact-item">
         <i data-feather="linkedin"></i>
-        <a href="https://linkedin.com/in/{{contact.linkedin}}">
+        <a target="_blank" href="https://linkedin.com/in/{{contact.linkedin}}">
             {{contact.linkedin}}
         </a>
     </div>
@@ -32,7 +32,7 @@
     {% if contact.github %}
         <div class="contact-item">
             <i data-feather="github"></i>
-            <a href="https://github.com/{{contact.github}}">
+            <a target="_blank" href="https://github.com/{{contact.github}}">
                 {{contact.github}}
             </a>
         </div>
@@ -41,7 +41,7 @@
     {% if contact.gitlab %}
         <div class="contact-item">
             <i data-feather="gitlab"></i>
-            <a href="https://gitlab.com/{{contact.gitlab}}">
+            <a target="_blank" href="https://gitlab.com/{{contact.gitlab}}">
                 {{contact.gitlab}}
             </a>
         </div>
@@ -50,7 +50,7 @@
     {% if contact.twitter %}
     <div class="contact-item">
         <i data-feather="twitter"></i>
-        <a href="https://twitter.com/{{contact.twitter}}">
+        <a target="_blank" href="https://twitter.com/{{contact.twitter}}">
             {{contact.twitter}}
         </a>
     </div>
@@ -59,7 +59,7 @@
     {% if contact.blog %}
     <div class="contact-item">
         <i data-feather="feather"></i>
-        <a href="{{contact.blog}}">
+        <a target="_blank" href="{{contact.blog}}">
             My tech blog
         </a>
     </div>
